tests/test_files/errors/any2.over
arr2: [
    ( [[   ]] [[ 2 ]] )
    ( [[ 2 ]] [[   ]] )
    ( [['c']] [['c']] )
]
